--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -69,7 +69,7 @@ You can run it independently of the SSH session so that the process can continue
 your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you run
 the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
 
-Use the optional `--debug` flag to enable debug logs. For more information, see [BBR Logging](logging.html).
+Use the optional `--debug` flag to enable debug logs. For more information, see [BBR logging](logging.html).
 
 #### <a id='restore-director'></a> Restore a BOSH Director
 
