--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Installing BOSH Backup and Restore
+title: Installing BOSH Backup and Restore (BBR)
 owner: BBR
 ---
 
@@ -20,7 +20,7 @@ means of access to the VMs other computers on your network.
 For an example jumpbox deployment, see the
 [jumpbox-deployment](https://github.com/cloudfoundry/jumpbox-deployment) GitHub repository.
 
-## <a id="jumpbox-setup"></a> Step 1: Configure Your Jumpbox
+## <a id="jumpbox-setup"></a> Step 1: Configure your jumpbox
 
 Configure your jumpbox to meet the following requirements:
 
@@ -56,7 +56,7 @@ Consult the following table for more information about the network access permis
   </tr>
 </table>
 
-## <a id='scp'></a>Step 2: Transfer BBR to Your Jumpbox
+## <a id='scp'></a>Step 2: Transfer BBR to your jumpbox
 
 If you run your BBR command from the jumpbox, perform the following
 steps to transfer the `bbr` binary to your jumpbox:
