fix formatting of notes

--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -303,7 +303,7 @@ The pre-backup check cannot check for available disk space, ongoing network conn
     backup</pre>
 
     <p class="note">
-    <span class="note__title">Note</span>
+    <span class="note__title"><strong>Note</strong></span>
     The BBR backup command can take a long time to complete.
     You can run it independently of the SSH session so that the process can continue running even
     if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you can
