tidy procedure by breaking it into steps

--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -134,12 +134,13 @@ steps in [Clean up after failed restore](#manual-clean) below.
 
 ## <a id='cancel-restore'></a>Cancel a restore
 
-To cancel a restore:
+To cancel a restore, you must terminate the BBR process.
 
-1. Terminate the BBR process by pressing Ctrl-C and typing `yes` to confirm.
+1. Press Ctrl-C.
+1. Type `yes` at the prompt to confirm.
 
 Stopping a restore can leave the system in an unusable state and prevent future restores.
-Perform the procedures in the [Clean up after failed restore](#manual-clean) section below to ensure you can
+Perform the procedures in the [Clean up after failed restore](#manual-clean) section to ensure you can
 perform future restores.
 
 ## <a id="manual-clean"></a>Clean up after failed restore
